
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaumne Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-07-05 HS  1.8.0  Fixed UTF8 option was not effective by file reading and
                      writing of a query. and fixed crash at the time of file
                      save. Per report from Claudia.
2007-07-02 DP  1.8.0  Add an option to the Report Tool to open the output file
                      in the default browser.
2007-07-02 DP  1.8.0  Add a macro facility to the Query Tool [Krzysztof
                      Smigrodzki]
2007-06-25 DP  1.8.0  Add keyboard shortcuts to show and hide UI elements,
                      per Jan Kowalski.
2007-06-25 DP  1.8.0  Display the output pane in the query tool at query 
                      completion if it's currently hidden, per Jan Kowalski.
2007-06-12 DP  1.8.0  Ensure files can be converted to the required encoding
                      before saving, per report from Christian Lins.
2007-06-12 DP  1.8.0  Warn the user and allow her to abort before re-running
                      a backup or restore to or from the same file, in the same
                      session (can occur if the first attempt returns an error
                      or warning). Per gripes from various users :-)
2007-06-01 DP  1.8.0  Add support for multi-parameter aggregates.
2007-05-31 DP  1.8.0  Retain column widths when refreshing the edit grid, per
                      Ferenc Lutischan.
2007-05-30 DP  1.8.0  Ensure logfiles and pgpass files can be correctly saved
                      on Windows when the username contains non-ASCII chars.
                      Per report from Athanasios E. Samaras.
2007-05-26 DP  1.8.0  Ensure we always allow the maximum string length possible