@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-07-19 DP  1.8.0  Refactor the Query Tool's execQuery function to prevent
+                      pgAdmin freezing while two long running queries are 
+                      executing simultaneously.
 2007-07-05 HS  1.8.0  Fixed UTF8 option was not effective by file reading and
                       writing of a query. and fixed crash at the time of file
                       save. Per report from Claudia.
